cabal-version:  2.2
name:           project-cis5520
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/pranaymundhra/project-cis5520#readme>
homepage:       https://github.com/pranaymundhra/project-cis5520#readme
bug-reports:    https://github.com/pranaymundhra/project-cis5520/issues
author:         Pranay Mundhra, Audrey Keener
maintainer:     keenera@sas.upenn.edu, pmundhra@wharton.upenn.edu
copyright:      2022 Audrey Keener, Pranay Mundhra
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/pranaymundhra/project-cis5520

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
  default-language:
    GHC2021
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      Lib
      BloomFilter
      SkipList
      HashFunction
      BinaryFilter 
      DemoBloomFilter
      Murmur
  build-depends:
      base >=4.6 && <5
    , bytestring >=0.10
    , cereal >=0.5.1
    , cassava
    , vector
  hs-source-dirs:
      src

executable project-cis5520-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      project-cis5520


test-suite project-cis5520-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is: 
      Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      project-cis5520

